tests/error/array_errors/new_array_cannot_infer.err
Error: Cannot infer type (at $FILE:13:9)
   | 
11 | @guppy(module)
12 | def main() -> None:
13 |     xs = array()
   |          ^^^^^^^ Cannot infer the type of this array

Note: Consider adding a type annotation: `x: array[???] = ...`

Guppy compilation failed due to 1 previous error
